--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
   width:5px;
 }
 ::-webkit-scrollbar-track {
-  background: #fe6b6b;
+  background: #fc9e9e;
 }
 ::-webkit-scrollbar-thumb {
   background: #5e1717;
@@ -69,4 +69,22 @@ a{
   touch-action: manipulation;
   -webkit-user-drag: none;
   user-select: none;
+}
+
+/*  background for projects  */
+.background-animate {
+  background-size: 400%;
+  -webkit-animation: AnimationName 3s ease infinite;
+  -moz-animation: AnimationName 3s ease infinite;
+  animation: AnimationName 3s ease infinite;
+}
+
+@keyframes AnimationName {
+  0%,
+  100% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
 }
