--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,8 +86,8 @@ a{
   user-select: none;
 }
 
-/*  background for projects  */
-.background-animate {
+/*  animation background  */
+/* .background-animate {
   background-size: 400%;
   -webkit-animation: AnimationName 3s ease infinite;
   -moz-animation: AnimationName 3s ease infinite;
@@ -102,7 +102,9 @@ a{
   50% {
     background-position: 100% 50%;
   }
-}
+} */
+
+/*                   */
 
 .progress-bar {
   position: fixed;
