--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -86,6 +86,13 @@ a{
   user-select: none;
 }
 
+div{
+  -webkit-touch-callout: none;
+  touch-action: manipulation;
+  -webkit-user-drag: none;
+  user-select: none;
+}
+
 /*  Abilites Text  */
 
 /* olor:''};
